Name:                walkable
Version:             0.2
Synopsis:            Class and template to modify a hierarchy of data types
Homepage:            https://github.com/max630/walkable/
License:             BSD3
License-file:        LICENSE
Author:              Max Kirillov
Maintainer:          max@max630.net
Stability:           Experimental
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.2
Description:
    Contains a template function to generate instances for recursive transform
    of data types.
    Also implements classes and instances to walk through TH declarations, allowing
    to implement non-trivial syntax forms.


Library
  Exposed-modules: Control.Walkable.Class, Control.Walkable.TH, Control.Walkable.THExp
  Build-depends: base, mtl, template-haskell, containers
